# Parallel_File_Encryptor_Decryptor_In_Cpp

./: .env  .gitignore  CMakeLists.txt  FileFIliter.hpp  Makefile  README.md  build.sh  main.cpp  post  readme  tests.py  text
EncryptDecrypt/: cryption.cpp  cryption.hpp
FileCompression/: CompresseFile.cpp  CompresseFile.hpp
MultiThreading/: ThreadPool.cpp  ThreadPool.hpp
OpenSSL/: OpenSSLCryption.cpp  OpenSSLCryption.hpp
file_handling/: .env  IO.cpp  IO.hpp  ReadEnv.hpp
processes/: ProcessManagement.cpp  ProcessManagement.hpp  Task.hpp
test/: test_1.txt  test_10.txt  test_100.txt  test_1000.txt  test_101.txt  test_102.txt  test_103.txt  test_104.txt  test_105.txt  test_106.txt  test_107.txt  test_108.txt  test_109.txt  test_11.txt  test_110.txt  test_111.txt  test_112.txt  test_113.txt  test_114.txt  test_115.txt  test_116.txt  test_117.txt  test_118.txt  test_119.txt  test_12.txt  test_120.txt  test_121.txt  test_122.txt  test_123.txt  test_124.txt  test_125.txt  test_126.txt  test_127.txt  test_128.txt  test_129.txt  test_13.txt  test_130.txt  test_131.txt  test_132.txt  test_133.txt  (+960 more)
test1/: test_1.txt  test_10.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt  test_7.txt  test_8.txt  test_9.txt
test2/: test_1.txt  test_10.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt  test_7.txt  test_8.txt  test_9.txt
